[gd_scene load_steps=5 format=3 uid="uid://c2s70yrc7qee1"]

[ext_resource type="Texture2D" uid="uid://cgnaad6y121to" path="res://resources/basic-enemy.png" id="1_0xr5n"]
[ext_resource type="Script" path="res://scripts/enemy.gd" id="1_17ml1"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_4pc8p"]
radius = 6.0
height = 24.0

[sub_resource type="CircleShape2D" id="CircleShape2D_alken"]
radius = 28.0

[node name="Enemy" type="Area2D" groups=["enemies"]]
script = ExtResource("1_17ml1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_4pc8p")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_0xr5n")

[node name="AttackTimer" type="Timer" parent="."]
autostart = true

[node name="AttackArea" type="Area2D" parent="."]

[node name="AttackColision" type="CollisionShape2D" parent="AttackArea"]
shape = SubResource("CircleShape2D_alken")
disabled = true

[node name="WalkTimer" type="Timer" parent="."]
wait_time = 2.0

[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
[connection signal="body_entered" from="AttackArea" to="." method="_on_attack_area_body_entered"]
[connection signal="timeout" from="WalkTimer" to="." method="_on_walk_timer_timeout"]
